--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,12 @@ set (plfs_VERSION_MAJOR 2)
 set (plfs_VERSION_MINOR 3)
 set (plfs_VERSION_PATCH 0)
 set (PACKAGE_STRING "PLFS ${plfs_VERSION_MAJOR}.${plfs_VERSION_MINOR}")
+set (plfs_VERSION_FULL "${plfs_VERSION_MAJOR}.${plfs_VERSION_MINOR}")
 if (DEFINED plfs_VERSION_PATCH)
     #if it's 0 don't print it
     if (plfs_VERSION_PATCH)
         set (PACKAGE_STRING "${PACKAGE_STRING}.${plfs_VERSION_PATCH}")
+        set (plfs_VERSION_FULL "${plfs_VERSION_FULL}.${plfs_VERSION_PATCH}")
     endif()
 endif()
 
@@ -114,10 +116,13 @@ if (NOT DISABLE_STATIC_LIB)
     #make sure these build first, causes issues in 2.6
     #if not
     add_dependencies(plfs_lib plfs_lib_static)
-    INSTALL(TARGETS plfs_lib plfs_lib_static DESTINATION lib)
+    INSTALL(TARGETS plfs_lib  plfs_lib_static
+                LIBRARY DESTINATION lib
+                ARCHIVE DESTINATION lib)
     SET_TARGET_PROPERTIES(plfs_lib_static PROPERTIES OUTPUT_NAME plfs)
 else()
-    INSTALL(TARGETS plfs_lib DESTINATION lib)
+    INSTALL(TARGETS plfs_lib
+                LIBRARY DESTINATION lib)
 endif(NOT DISABLE_STATIC_LIB)
 
 
@@ -151,7 +156,7 @@ if (FUSE_FOUND AND NOT DISABLE_FUSE)
     #change its name so that it create plfs executable
     SET_TARGET_PROPERTIES(plfs_fuse PROPERTIES OUTPUT_NAME plfs)
     #set install dir
-    INSTALL(TARGETS plfs_fuse DESTINATION sbin)
+    INSTALL(PROGRAMS plfs_fuse DESTINATION sbin)
 endif(FUSE_FOUND AND NOT DISABLE_FUSE)
 
 
@@ -163,7 +168,7 @@ foreach (PROG dcon findmesgbuf plfs_check_config plfs_flatten_index plfs_ls
 endforeach(PROG)
 
 #set up targets for make install
-INSTALL(TARGETS dcon findmesgbuf plfs_check_config plfs_flatten_index plfs_ls 
+INSTALL(PROGRAMS dcon findmesgbuf plfs_check_config plfs_flatten_index plfs_ls 
                 plfs_map plfs_query plfs_recover plfs_version DESTINATION bin
 )
 INSTALL(FILES "${PLFS_SOURCE_DIR}/plfs.h ${PLFS_SOURCE_DIR}/config.h" DESTINATION include)
@@ -183,3 +188,17 @@ INSTALL(FILES ${man7} DESTINATION share/man/man7)
 #build patches
 execute_process(COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/mpi_adio/scripts COMMAND ./make_ad_plfs_patch)
 execute_process(COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/mpi_adio/scripts COMMAND ./make_ad_plfs_patch --mpi=mpich2)
+
+#if we ever move to cmake 2.8 this would be a cool feature.
+#set up rpm build process
+#set(CPACK_PACKAGE_VERSION ${plfs_VERSION_FULL})
+#set(CPACK_GENERATOR "RPM")
+#set(CPACK_PACKAGE_NAME "plfs")
+#set(CPACK_PACKAGE_RELEASE 1)
+#set(CPACK_PACKAGE_CONTACT "Aaron Torres")
+#set(CPACK_PACKAGE_VENDOR "Los Alamos National Laboratory")
+#set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
+#set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
+#configure_file("${CMAKE_CURRENT_SOURCE_DIR}/plfs.spec.in" "${CMAKE_CURRENT_BINARY_DIR}/plfs.spec" @ONLY IMMEDIATE)
+#set(CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_CURRENT_BINARY_DIR}/plfs.spec")
+#include(CPack)
