--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,7 +163,7 @@ if (FUSE_FOUND AND NOT DISABLE_FUSE)
     #change its name so that it create plfs executable
     SET_TARGET_PROPERTIES(plfs_fuse PROPERTIES OUTPUT_NAME plfs)
     #set install dir
-    INSTALL(PROGRAMS plfs_fuse DESTINATION sbin)
+    INSTALL(PROGRAMS ${PLFS_BUILD_DIR}/bin/plfs DESTINATION sbin)
 endif(FUSE_FOUND AND NOT DISABLE_FUSE)
 
 
@@ -175,10 +175,12 @@ foreach (PROG dcon findmesgbuf plfs_check_config plfs_flatten_index plfs_ls
 endforeach(PROG)
 
 #set up targets for make install
-INSTALL(PROGRAMS dcon findmesgbuf plfs_check_config plfs_flatten_index plfs_ls 
-                plfs_map plfs_query plfs_recover plfs_version DESTINATION bin
-)
-INSTALL(FILES "${PLFS_SOURCE_DIR}/plfs.h ${PLFS_SOURCE_DIR}/config.h" DESTINATION include)
+FILE(GLOB binaries ${PLFS_BUILD_DIR}/bin/plfs_*)
+LIST(APPEND binaries ${PLFS_BUILD_DIR}/bin/dcon)
+LIST(APPEND binaries ${PLFS_BUILD_DIR}/bin/findmesgbuf)
+INSTALL(PROGRAMS ${binaries} DESTINATION bin)
+LIST(APPEND headers ${PLFS_SOURCE_DIR}/plfs.h)
+INSTALL(FILES ${headers} DESTINATION include)
 
 #man pages
 add_subdirectory("${PLFS_MAN_DIR}")
