Add PLFS source code directory to the front of LDFLAGS.
Otherwise old plfs library in the system might break the build
process.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -88,6 +88,6 @@ smallfileunit_CXXFLAGS = \
         -I../src -I../src/smallfile -D_FILE_OFFSET_BITS=64 @CPPUNIT_CFLAGS@
 
 smallfileunit_LDFLAGS = \
-	@CPPUNIT_LIBS@ -L../src -lplfs -lpthread
+	-L../src @CPPUNIT_LIBS@ -lplfs -lpthread
 
 endif
