added a few extra header files to install in include/plfs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,6 +247,10 @@ INSTALL(TARGETS dcon findmesgbuf plfs_check_config plfs_flatten_index plfs_ls
                 plfs_map plfs_query plfs_recover plfs_version DESTINATION bin
 )
 INSTALL(FILES "${PLFS_BUILD_DIR}/plfs.h" DESTINATION include)
+INSTALL(FILES "${PLFS_SOURCE_DIR}/Mlog/mlogfacs.h"
+	      "${PLFS_SOURCE_DIR}/plfs_internal.h" 
+	      "${PLFS_SOURCE_DIR}/Util.h" 
+    	      "${PLFS_SOURCE_DIR}/COPYRIGHT.h" DESTINATION include/plfs)
 
 #man pages
 add_subdirectory("${PLFS_MAN_DIR}")
