Update patching for mpich
- Add prep.patch files for mpich2-1.5 and mpich-3 (the project changed
  its name from MPICH2 to MPICH when it became completely MPI-3
  compliant and also updated their version numbers directly to 3)
- The build system for mpich2-1.5 is different than 1.4, so a new
  Makefile template is needed in ad_plfs. This is Makefile.mk.mpich.
  This same build system is in use with mpich-3.
- We now use mpich as the name for the mpich project instead of mpich2
  in compliance with their name change. This is reflected in the naming
  of the mpich directory and the arguments to make_ad_plfs_patch.
- Names for mpich prep.patches are based on the name of the tarballs.
  That is, prep.patches for mpich2-1.4 are named
  mpich2-1.4-plfs-prep.patch where as mpich-3 is named
  mpich-3-plfs-prep.patch.
- make_ad_plfs_patch is only compatible with the newer build system. A
  note has been placed in README.patching about copying the correct
  Makefile template when dealing with versions prior to mpich2-1.5. The
  name of the generated patch is always mpich-plfs.patch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -366,7 +366,7 @@ INSTALL(FILES ${man7} DESTINATION ${MANDIR}/man7)
 
 #build patches
 execute_process(COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/mpi_adio/scripts COMMAND ./make_ad_plfs_patch)
-execute_process(COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/mpi_adio/scripts COMMAND ./make_ad_plfs_patch --mpi=mpich2)
+execute_process(COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/mpi_adio/scripts COMMAND ./make_ad_plfs_patch --mpi=mpich)
 
 #if we ever move to cmake 2.8 this would be a cool feature.
 #set up rpm build process
