--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 2.6)
 
+#default to Release build if not specified
+#This is before the project(plfs) invocation to allow it to be cached
+if (NOT CMAKE_BUILD_TYPE)
+    message("-- CMAKE_BUILD_TYPE not selected, default to Release")
+    set(CMAKE_BUILD_TYPE Release CACHE STRING "The type of build")
+endif()
+
 #begin plfs project
 project(plfs)
 
@@ -228,12 +235,6 @@ if (NOT MANDIR)
     set (MANDIR "share/man/" CACHE PATH "Destination of all manpages")
 else()
     message("-- MANDIR set to ${MANDIR}")
-endif()
-
-#default to Release build if not specified
-if (NOT CMAKE_BUILD_TYPE)
-    message("-- CMAKE_BUILD_TYPE not selected, default to Release")
-    set(CMAKE_BUILD_TYPE "Release")
 endif()
 
 #setup RPATH/RUNPATH flags and shared library
