Updated plfs-yaml to use custom destinations

--- a/src/Plfsrc/yaml-cpp/CMakeLists.txt
+++ b/src/Plfsrc/yaml-cpp/CMakeLists.txt
@@ -94,9 +94,9 @@ set(_library_dir lib)
 set(LIB_INSTALL_DIR "${_library_dir}${LIB_SUFFIX}")
 
 set(_INSTALL_DESTINATIONS
-	RUNTIME DESTINATION bin
-	LIBRARY DESTINATION ${LIB_INSTALL_DIR}
-	ARCHIVE DESTINATION "lib${LIB_SUFFIX}"
+	RUNTIME DESTINATION ${BINDIR}
+	LIBRARY DESTINATION ${LIBDIR} 
+	ARCHIVE DESTINATION ${LIBDIR}
 )
 
 
