--- a/scripts/analysis/CMakeLists.txt
+++ b/scripts/analysis/CMakeLists.txt
@@ -8,7 +8,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
 SET(CMAKE_SWIG_FLAGS "")
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter -Wno-missing-field-initializers")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter -Wno-missing-field-initializers -fno-strict-aliasing")
 include_directories("${PLFS_SOURCE_DIR}/LogicalFS/Container")
 include_directories(${PLFS_SOURCE_DIR})
 include_directories("${PLFS_SOURCE_DIR}/LogicalFS/Container/Index")
@@ -27,21 +27,10 @@ SWIG_LINK_LIBRARIES(plfsinterface ${PYTHON_LIBRARIES})
 swig_link_libraries(plfsinterface plfs_lib)
 
 project(analysis)
-add_executable(analysis analysisDataParser.c)
-set(CMAKE_C_COMPILER CC)
-include_directories(${MPI_INCLUDE_PATH})
-include_directories(${PLFS_BUILD_DIR})
-include_directories("${PLFS_SOURCE_DIR}/LogicalFS/Container")
-include_directories(${PLFS_SOURCE_DIR})
-include_directories("${PLFS_SOURCE_DIR}/LogicalFS/Container/Index")
-include_directories("${PLFS_SOURCE_DIR}/LogicalFS")
-include_directories("${PLFS_SOURCE_DIR}/IOStore")
-include_directories("${PLFS_SOURCE_DIR}/Plfsrc")
-include_directories("${PLFS_SOURCE_DIR}/Plfsrc/yaml-cpp/include")
-include_directories("${PLFS_SOURCE_DIR}/Plfsrc/yaml-cpp/boost/")
-include_directories("${PLFS_SOURCE_DIR}/Mlog")
-include_directories(${MPI_INC})
+add_executable(analysis analysisDataParser.cpp)
+find_package(MPI REQUIRED)
 
-set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_INC})
+set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
+set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
 target_link_libraries(analysis ${MPI_LIBRARIES})
 target_link_libraries(analysis plfs_lib)
